--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
 
   <div id="openElementary" class="modalDialog">
 
-    <div class="modal-img">
+    <div class="modal-img-vertical">
       <a href="#close" title="Close" class="close">X</a>
       <img src="./resources/images/1erGrado.jpg" alt="">
       <h4>Elementary School</h4>
@@ -870,7 +870,7 @@
 
   <div id="openBJP" class="modalDialog">
 
-    <div class="modal-img">
+    <div class="modal-img-vertical">
       <a href="#close" title="Close" class="close">X</a>
       <img src="./resources/images/BJP-Crtf.jpg" alt="">
       <h4>Bellet Juvenil Puertorriqueño</h4>
@@ -1196,7 +1196,7 @@
     </div>
 
     <div id="openDrawing" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/drawing.jpg" alt="">
       </div>
@@ -1210,14 +1210,14 @@
     </div>
 
     <div id="openPainting" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/painting.jpg" alt="">
       </div>
     </div>
 
     <div id="openPhotography" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/photography.jpg" alt="">
       </div>
@@ -1252,7 +1252,7 @@
     </div>
 
     <div id="openFlyers" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/flayer.png" alt="">
       </div>
@@ -1266,14 +1266,14 @@
     </div>
 
     <div id="openLayout" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/LayoutSkills.jpg" alt="">
       </div>
     </div>
 
     <div id="openPoster" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/MoviePoster.png" alt="">
       </div>
@@ -1281,14 +1281,14 @@
 
 
     <div id="openEnvelopes" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img  src="./resources/images/Envelope.jpg" alt="">
       </div>
     </div>
 
     <div id="openLetterheads" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/Letterhead.png" alt="">
       </div>
@@ -1309,7 +1309,7 @@
     </div>
 
     <div id="openPostcards" class="modalDialog">
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/PostCards.jpg" alt="">
       </div>
