--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
 
         <div id="JE-title">
-          <h1>|  Metro Resume</h1>
+          <h1>|  José Enrique Cartagena Ortiz</h1>
         </div>
 
         <div id="JE-favs">
-          <i class="fa fa-user-circle"></i>
-          <i class="fa fa-envelope-square"></i>
-          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-user"></i>
+          <i class="fa fa-envelope"></i>
+          <i class="fa fa-linkedin"></i>
         </div>
 
       </div>
@@ -53,8 +53,9 @@
                   <circle id="b-date1" class="click" cx="80.756" cy="385.809" r="37.5" stroke="#f5be30" stroke-width="5" fill="#f5be30" />
               </g>
 
-              <g class="life-stop" x="80.746" y="385.809">
+              <g class="life-stop tooltip" x="80.746" y="385.809">
                 <a xlink:href="#openBD2" >
+                  <!-- <text class="tooltiptext" id="anchor-start" transform="translate(83.865,335.092)">José E. Cartagena-Ortiz</text> -->
                   <image id="pr-flag" x="50.756" y="355.809" xlink:href="./resources/images/pr-flag.png" width="60" height="60" />
                   <circle id="b-date2" class="click" cx="80.746" cy="385.809" r="30" stroke="black" stroke-width="5" fill="none" />
                 </a>
@@ -1240,7 +1241,7 @@
     <div id="openVideos" class="modalDialog">
       <div class="modal-object">
         <a href="#close" title="Close" class="close">X</a>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/b5f2RphLN6c" frameborder="0" allowfullscreen></iframe>
+        <iframe width="600" height="355" src="https://www.youtube.com/embed/b5f2RphLN6c" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
 
