--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
 
         <div id="JE-favs">
-          <i class="fa fa-user"></i>
-          <i class="fa fa-envelope"></i>
-          <i class="fa fa-linkedin"></i>
+          <i class="fa fa-vcard"></i>
+          <i class="fa fa-envelope-square"></i>
+          <i class="fa fa-linkedin-square"></i>
         </div>
 
       </div>
@@ -54,7 +54,7 @@
               </g>
 
               <g class="life-stop tooltip" x="80.746" y="385.809">
-                <a xlink:href="#openBD2" >
+                <a xlink:href="#openBD2" id="tooltipmodal">
                   <!-- <text class="tooltiptext" id="anchor-start" transform="translate(83.865,335.092)">José E. Cartagena-Ortiz</text> -->
                   <image id="pr-flag" x="50.756" y="355.809" xlink:href="./resources/images/pr-flag.png" width="60" height="60" />
                   <circle id="b-date2" class="click" cx="80.746" cy="385.809" r="30" stroke="black" stroke-width="5" fill="none" />
@@ -83,7 +83,7 @@
 
               <g class="life-stop" x="521.826" y="385.809">
                 <a xlink:href="#openBJP">
-                  <image id="mx-flag" x="501.183" y="365.809" xlink:href="./resources/images/bjp-logo.png" width="40" height="40" />
+                  <image id="bjp-logo" x="501.183" y="365.809" xlink:href="./resources/images/bjp-logo.png" width="40" height="40" />
                   <circle id="bjp" class="click" cx="521.826" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
                 </a>
               </g>
@@ -993,19 +993,9 @@
 
     <div id="openCodecademy" class="modalDialog">
 
-      <div class="modal-text">
+      <div class="modal-object">
         <a href="#close" title="Close" class="close">X</a>
-        <h2><a href="https://www.codecademy.com" target="_blank">Codecademy</a></h2>
-        <h3>Freelance Website Development Online Course</h3>
-        <p>Intensive online course that covers the skills professionals use to develop websites from scratch:</p>
-        <ul>
-          <li>HTML and CSS</li>
-          <li>Command Line and Git</li>
-          <li>Display and Positioning</li>
-          <li>Responsive Design and Browser Compatibility</li>
-          <li>Design and UI Feedback</li>
-          <li>Bootstrap, JavaScript, and jQuery</li>
-        </ul>
+        <iframe src="https://www.credential.net/embed/sb7hvvxq" width="600" height="400" frameBorder="0" allowfullscreen></iframe>
       </div>
 
     </div>
