--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>José Enrique | Metro Resume</title>
+    <title>Josenrique | Graphic Resume</title>
     <link rel="shortcut icon" href="./resources/images/je-logo-favicon.png" />
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
