--- a/index.html
+++ b/index.html
@@ -987,6 +987,7 @@
         <h3>Chapel Hill, NC</h3>
         <h4>Art History</h4>
         <h5>ARTH 159: The Film Experience</h5>
+        <object width="600" height="300" data="./resources/objects/FilmhistPaper.pdf"></object>
       </div>
 
     </div>
