--- a/index.html
+++ b/index.html
@@ -45,12 +45,20 @@
 
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="2500" height="750" onload="init(evt)">
 
+          <!-- Sub-title Starts Here -->
+
+          <g id="subtitle" x="110.756" y="181.938">
+            <text id="anchor-start" transform="translate(50.746,162.623)">Graphic Resume</text>
+          </g>
+
+          <!-- Sub-title Ends Here -->
+
           <!-- Life Line Stops Starts Here -->
 
               <!-- PR Section Starts -->
 
               <g class="life-stop" x="80.746" y="385.809">
-                  <circle id="b-date1" class="click" cx="80.756" cy="385.809" r="37.5" stroke="#f5be30" stroke-width="5" fill="#f5be30" />
+                <circle id="b-date1" class="click" cx="80.756" cy="385.809" r="37.5" stroke="#f5be30" stroke-width="5" fill="#f5be30" />
               </g>
 
               <g class="life-stop tooltip" x="80.746" y="385.809">
@@ -798,32 +806,40 @@
 
           <!-- Key Starts Here -->
 
-          <g class="keyInfo" x="162.314" y="558.852">
-              <text id="keyTitle" transform="translate(162.314,564.852)">Key</text>
-          </g>
+            <g class="keyInfo" x="162.314" y="558.852">
+                <text id="keyTitle" transform="translate(162.314,564.852)">Graphic Resume Key</text>
+            </g>
 
-          <g class="keyInfo" x="97.006" y="605.086">
-              <text transform="translate(97.006,605.086)">Life Line</text>
-          </g>
+            <g class="keyInfo" x="97.006" y="605.086">
+                <text transform="translate(97.006,605.086)">Life Line</text>
+            </g>
 
 
-          <g class="keyInfo" x="97.006" y="634.008">
-              <text transform="translate(97.006,634.008)">Educational Line</text>
-          </g>
+            <g class="keyInfo" x="97.006" y="634.008">
+                <text transform="translate(97.006,634.008)">Educational Line</text>
+            </g>
 
-          <g class="keyInfo" x="97.006" y="667.028">
-              <text transform="translate(97.006,667.028)">Professional Line</text>
-          </g>
+            <g class="keyInfo" x="97.006" y="667.028">
+                <text transform="translate(97.006,667.028)">Professional Line</text>
+            </g>
 
-          <g class="keyInfo" x="97.006" y="697.172">
-              <text transform="translate(97.006,697.172)">Professional Skillset</text>
-          </g>
+            <g class="keyInfo" x="97.006" y="697.172">
+                <text transform="translate(97.006,697.172)">Professional Skillset</text>
+            </g>
 
-          <g class="keyInfo" x="97.006" y="727.557">
-              <text transform="translate(97.006,727.557)">Arts &amp; Design Skillset</text>
-          </g>
+            <g class="keyInfo" x="97.006" y="727.557">
+                <text transform="translate(97.006,727.557)">Arts &amp; Design Skillset</text>
+            </g>
 
           <!-- Key Ends Here -->
+
+          <!-- Copyright Starts Here -->
+
+          <g id="copyright" x="2283.373" y="716.774">
+            <text transform="translate(2283.373,716.774)">© 2017 J E Cartagena Ortiz</text>
+          </g>
+
+          <!-- Copyright Ends Here -->
 
         </svg>
 
@@ -1316,8 +1332,6 @@
 
 
     <!-- Skills Lines Stops Starts Here -->
-
-
 
   <!-- Modal Boxes Ends Here -->
 
