--- a/index.html
+++ b/index.html
@@ -835,8 +835,8 @@
 
           <!-- Copyright Starts Here -->
 
-          <g id="copyright" x="2283.373" y="716.774">
-            <text transform="translate(2283.373,716.774)">© 2017 J E Cartagena Ortiz</text>
+          <g id="copyright" x="2371.492" y="716.774">
+            <text transform="translate(2371.492,716.774)">© 2017 J.E.C.O.</text>
           </g>
 
           <!-- Copyright Ends Here -->
