--- a/index.html
+++ b/index.html
@@ -220,12 +220,9 @@
               <!-- PR Section Starts -->
 
               <g class="education-stop" x="613.835" y="288.196">
-                <a xlink:href="" >
                   <image id="uprponce-logo" x="613.835" y="288.196" xlink:href="./resources/images/uprponce-logo.png" width="40" height="40" />
-                </a>
               </g>
 
-              <!-- <g class="education-stop" x="706.327" y="266.818"> -->
               <g class="education-stop" x="672.157" y="672.157">
                 <a xlink:href="#openupr-rp" >
                   <image id="upr-rp" x="672.157" y="248.817" xlink:href="./resources/images/upr-logo.png" width="60" height="60" />
@@ -233,13 +230,13 @@
               </g>
 
               <g class="education-stop" x="797.53" y="278.647">
-                <a xlink:href="" >
-                  <circle id="propuestas-uprrp" class="click" cx="797.53" cy="278.647" r="5" stroke="black" stroke-width="5" fill="white" />
+                <a xlink:href="#openPDuprrp" >
+                  <circle id="pd-uprrp" class="click" cx="797.53" cy="278.647" r="5" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
 
               <g class="education-stop" x="853.794" y="278.647">
-                <a xlink:href="" >
+                <a xlink:href="#openPDde1" >
                   <circle id="pd-de1" class="click" cx="853.794" cy="278.647" r="15" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
@@ -251,13 +248,13 @@
               </g>
 
               <g class="education-stop" x="1101.068" y="278.647">
-                <a xlink:href="#" >
+                <a xlink:href="#openPDhets" >
                   <circle id="pd-hets" class="click" cx="1101.068" cy="278.647" r="10" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
 
               <g class="education-stop" x="1150.603" y="278.647">
-                <a xlink:href="#">
+                <a xlink:href="#openPDcdata">
                   <circle id="pd-cdata" class="click" cx="1150.603" cy="278.647" r="15" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
@@ -945,14 +942,69 @@
 
     </div>
 
-    <div id="openPractica" class="modalDialog">
+    <div id="openPDuprrp" class="modalDialog">
 
-      <div class="modal-img">
+      <div class="modal-text">
         <a href="#close" title="Close" class="close">X</a>
-        <img src="./resources/images/practdocente.jpg">
-        <h2>UNIVERSITY OF PUERTO RICO Río Piedras – San Juan, PR</h2>
-        <h4>Teaching Practice</h4>
-        <h4>Visual Arts Education</h4>
+        <h2>Professional Development</h2>
+        <h3>UNIVERSITY OF PUERTO RICO Río Piedras</h3>
+        <h4>San Juan, PR</h4>
+        <ul>
+          <li>Workshop: Writing Educational Proposals - Teaching Practice Student Association</li>
+          <li>Project: How Children Develop Their Social, Emotional and Physical Needs Through Creative Art Experiences? - Colaborator - UPR Elementary School</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div id="openPDde1" class="modalDialog">
+
+      <div class="modal-text">
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>Professional Development</h2>
+        <h3>Puerto Rico Department of Education</h3>
+        <h4>San Juan, PR</h4>
+        <ul>
+          <li>Workshop: Teaching Math by Focusing on Problem Solving - America Aponte &amp; Assoc., Corp.</li>
+          <li>Confrence: "Learning Outside the Lines" Dictated by Jonathan Mooney</li>
+          <li>Seminar: Authentic learning of written language: appropriate practices for teaching - Division of Continuing Education and Professional Studies, University of Puerto Rico in Rio Piedras</li>
+          <li>Conference: Eleventh Annual Conference of the College Board: Excellence in academia services and support: rationale for retention in the levels of K to 16 - College Board Office of Puerto Rico and Latin America</li>
+          <li>Course: Community Schools Boards - Comptroller's Office of the Commonwealth of Puerto Rico</li>
+          <li>Seminar: Establishing Connections Through the Arts - Fine Arts Program, Puerto Rico Department of Education</li>
+          <li>Workshop: Behavior Modification - HELP, Inc.</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div id="openPDhets" class="modalDialog">
+
+      <div class="modal-text">
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>Basic Certification: Integrating New Technologies in Higher Education</h2>
+        <h3>Hispanic Educational Technology Services (HETS)</h3>
+        <h3>Metropolitan University</h3>
+        <h4>San Juan, PR</h4>
+        <ul>
+          <li>Assessment of online courses and faculty</li>
+          <li>Online support services for faculty, Blogs and Wikis</li>
+          <li>Student Online Services</li>
+          <li>Designing and creation of an online educational module</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div id="openPDcdata" class="modalDialog">
+
+      <div class="modal-text">
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>Professional Development</h2>
+        <h3>C_DATA</h3>
+        <h4>UPR Humacao - Humacao, PR</h4>
+        <ul>
+          <li>Congress: "Congreso de Blogfesores 2008" - Institute for the Development of Online Teaching and Learning, University of Puerto Rico in Mayagüez, Mayagüez, PR</li>
+        </ul>
       </div>
 
     </div>
@@ -1020,6 +1072,18 @@
     <!-- Educational Line Stops Ends Here -->
 
     <!-- Profesional Line Stops Starts Here -->
+
+    <div id="openPractica" class="modalDialog">
+
+      <div class="modal-img">
+        <a href="#close" title="Close" class="close">X</a>
+        <img src="./resources/images/practdocente.jpg">
+        <h2>UNIVERSITY OF PUERTO RICO Río Piedras – San Juan, PR</h2>
+        <h4>Teaching Practice</h4>
+        <h4>Visual Arts Education</h4>
+      </div>
+
+    </div>
 
     <div id="openDE1" class="modalDialog">
 
