--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         <div id="JE-favs">
           <i class="fa fa-vcard"></i>
-          <i class="fa fa-envelope-square"></i>
-          <i class="fa fa-linkedin-square"></i>
+          <a href="mailto:j.enrique77@gmail.com" target="_blank"><i class="fa fa-envelope-square"></i></a>
+          <a href="https://www.linkedin.com/in/jenrique77/" target="_top"><i class="fa fa-linkedin-square"></i></a>
         </div>
 
       </div>
@@ -131,7 +131,7 @@
                 </a>
               </g>
 
-              <g class="job-stop" x="818.582" y="385.809">
+              <g class="life-stop" x="818.582" y="385.809">
                 <a xlink:href="#openArtlic" >
                   <circle id="lic-arte-pr" class="click" cx="818.582" cy="385.809" r="15" stroke="#f5bf31" stroke-width="5" fill="white" />
                 </a>
@@ -151,7 +151,7 @@
                 </a>
               </g>
 
-              <g class="job-stop" x="1101.753" y="385.809">
+              <g class="life-stop" x="1101.753" y="385.809">
                 <a xlink:href="#openTechlic" >
                   <circle id="lic-tecno-pr" class="click" cx="1101.753" cy="385.809" r="15" stroke="#f5bf31" stroke-width="5" fill="white" />
                 </a>
@@ -184,10 +184,22 @@
                 </a>
               </g>
 
+              <g class="life-stop" x="1699.957" y="385.809">
+                <a xlink:href="" >
+                  <circle id="lic-ct" class="click" cx="1699.957" cy="385.809" r="15" stroke="#f5bf31" stroke-width="5" fill="white" />
+                </a>
+              </g>
+
               <g class="life-stop" x="1759.934" y="385.809">
                 <a xlink:href="" >
                   <image id="canada-flag" x="1739.934" y="365.809" xlink:href="./resources/images/can.png" width="40" height="40" />
                   <circle id="canada" class="click" cx="1759.934" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
+                </a>
+              </g>
+
+              <g class="life-stop" x="1859.106" y="385.809">
+                <a xlink:href="" >
+                  <circle id="lic-ma" class="click" cx="1859.106" cy="385.809" r="15" stroke="#f5bf31" stroke-width="5" fill="white" />
                 </a>
               </g>
 
@@ -260,7 +272,7 @@
               </g>
 
               <g class="education-stop" x="1229.694" y="278.647">
-                <a xlink:href="">
+                <a xlink:href="#openPDde2">
                   <circle id="pd-de2" class="click" cx="1229.694" cy="278.647" r="5" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
@@ -268,13 +280,13 @@
               <!-- US Section Starts -->
 
               <g class="education-stop" x="1487.906" y="487.908">
-                <a xlink:href="#" >
+                <a xlink:href="#openPDjfk" >
                   <circle id="pd-jfk" class="click" cx="1487.906" cy="487.908" r="10" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
 
               <g class="education-stop" x="1641.756" y="487.908">
-                <a xlink:href="#" >
+                <a xlink:href="#openPDgirlsinc" >
                   <circle id="pd-girlsinc" class="click" cx="1641.756" cy="487.908" r="5" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
@@ -804,7 +816,7 @@
           <!-- Key Starts Here -->
 
             <g class="keyInfo" x="162.314" y="558.852">
-                <text id="keyTitle" transform="translate(162.314,564.852)">Graphic Resume Key</text>
+                <text id="keyTitle" transform="translate(162.314,564.852)">Key</text>
             </g>
 
             <g class="keyInfo" x="97.006" y="605.086">
@@ -977,6 +989,18 @@
 
     </div>
 
+    <div id="openSagrado" class="modalDialog">
+
+      <div class="modal-img">
+        <a href="#close" title="Close" class="close">X</a>
+        <img src="./resources/images/diploma-ma.jpg" alt="">
+        <h2>UNIVERSITY OF THE SACRED HEART – San Juan, PR</h2>
+        <h4>Master of Arts in Education</h4>
+        <h4>Instructional Systems and Educational Technology</h4>
+      </div>
+
+    </div>
+
     <div id="openPDhets" class="modalDialog">
 
       <div class="modal-text">
@@ -1003,20 +1027,71 @@
         <h3>C_DATA</h3>
         <h4>UPR Humacao - Humacao, PR</h4>
         <ul>
-          <li>Congress: "Congreso de Blogfesores 2008" - Institute for the Development of Online Teaching and Learning, University of Puerto Rico in Mayagüez, Mayagüez, PR</li>
+          <li>Congress: "Congreso de Blogfesores 2008" - Institute for the Development of Online Teaching and Learning, University of Puerto Rico in Mayagüez</li>
+          <li>Workshop: Virtual Technologies: Innovation and Opportunities - Dictated by Dr. Antonio Vantaggiato</li>
+          <li>Workshop: A New Tool for Education: The Virtual Library - Dictated by Liz M. Pagán, MLIS</li>
+          <li>Workshop: QuestionPoint</li>
+          <li>Workshop: Second Life. Participant</li>
+          <li>Seminar: Open course wear (OCW) of the University of Puerto Rico: general information, management tools</li>
+          <li>Workshop: Standards of Conduct - Dictated by Lcdo. Marcos Román López, Training Division, HR</li>
+          <li>Symposium: Science &amp; Web 2.0 Symposium: A Dialogue - STEMmEd, University of the Sacred Heart</li>
+          <li>Workshop: Safe Web Browsing - Dictated by Jorge Dávila Laureano, Training Division, HR</li>
         </ul>
       </div>
 
     </div>
 
-    <div id="openSagrado" class="modalDialog">
+    <div id="openPDde2" class="modalDialog">
 
-      <div class="modal-img">
+      <div class="modal-text">
         <a href="#close" title="Close" class="close">X</a>
-        <img src="./resources/images/diploma-ma.jpg" alt="">
-        <h2>UNIVERSITY OF THE SACRED HEART – San Juan, PR</h2>
-        <h4>Master of Arts in Education</h4>
-        <h4>Instructional Systems and Educational Technology</h4>
+        <h2>Professional Development</h2>
+        <h3>Technology and Education Institute, Inc.</h3>
+        <h4>San Juan, PR</h4>
+        <ul>
+          <li>Workshop: Multiple Intelligences - Know Them and Apply Them</li>
+          <li>Workshop: Multiple Intelligences - Educating for Diversity</li>
+          <li>Workshop: Multiple Intelligences - Instructional Module Design</li>
+          <li>Workshop: Multiple Intelligences - The Effective Integration of Action Research</li>
+          <li>Workshop: Curricular Alignment - Action Research</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div id="openPDjfk" class="modalDialog">
+
+      <div class="modal-text">
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>Professional Development</h2>
+        <h3>JFK Middle School</h3>
+        <h4>Northampton, MA</h4>
+        <ul>
+          <li>Workshop: Class Drive</li>
+          <li>Conference: MassCUE &amp; M.A.S.S. 2010 Technology Conference - Todays global learner; tomorrow global leaders</li>
+          <li>Webinar: Discovery Education streaming - Getting Started Webinar</li>
+          <li>Conference: First Annual Technology Conference &amp; Exposition, Technology in Education Partnership</li>
+          <li>Training: Developing IEP Accommodations and Modifications</li>
+          <li>Training: Bullying/Harassment &amp; Mandated Report</li>
+          <li>Training: Safe Schools/Drug Free &amp; Mandated Reporting/ </li>
+          <li>Training: Executive Functioning</li>
+          <li>Training: Understanding the New Reading Standards</li>
+          <li>Confrence: MassCUE &amp; M.A.S.S. 2011 Technology Conference - Todays global learner; Tomorrow global leaders=TGL2:What next?</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div id="openPDgirlsinc" class="modalDialog">
+
+      <div class="modal-text">
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>Professional Development</h2>
+        <h3>Girls Inc.</h3>
+        <h4>Holyoke, MA</h4>
+        <ul>
+          <li>Conference: Once of Prevention 2012, Paving a New Way for Prevention - Transforming how we pay, play and perform</li>
+        </ul>
       </div>
 
     </div>
