--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         <div id="JE-favs">
           <i class="fa fa-vcard"></i>
-          <a href="mailto:j.enrique77@gmail.com" target="_blank"><i class="fa fa-envelope-square"></i></a>
-          <a href="https://www.linkedin.com/in/jenrique77/" target="_top"><i class="fa fa-linkedin-square"></i></a>
+          <a href="mailto:j.enrique77@gmail.com" target="_top"><i class="fa fa-envelope-square"></i></a>
+          <a href="https://www.linkedin.com/in/jenrique77/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
         </div>
 
       </div>
@@ -99,6 +99,7 @@
               <g class="life-stop" x="523.485" y="178.941">
                 <a xlink:href="" >
                   <image id="mx-flag" x="503.485" y="158.941" xlink:href="./resources/images/mx.png" width="40" height="40" />
+                  <!-- <image id="mx-airplane" x="503.485" y="158.941" xlink:href="./resources/images/airplane.png" width="40" height="40" /> -->
                   <circle id="mexico" class="click" cx="523.485" cy="178.941" r="20" stroke="black" stroke-width="5" fill="none" />
                 </a>
               </g>
@@ -185,7 +186,7 @@
               </g>
 
               <g class="life-stop" x="1699.957" y="385.809">
-                <a xlink:href="" >
+                <a xlink:href="#openCTlic" >
                   <circle id="lic-ct" class="click" cx="1699.957" cy="385.809" r="15" stroke="#f5bf31" stroke-width="5" fill="white" />
                 </a>
               </g>
@@ -198,7 +199,7 @@
               </g>
 
               <g class="life-stop" x="1859.106" y="385.809">
-                <a xlink:href="" >
+                <a xlink:href="#openMAlic" >
                   <circle id="lic-ma" class="click" cx="1859.106" cy="385.809" r="15" stroke="#f5bf31" stroke-width="5" fill="white" />
                 </a>
               </g>
@@ -220,9 +221,9 @@
               </g>
 
               <g class="life-stop tooltip" x="2134.449" y="385.809">
-                <text class="tooltiptext" transform="translate(2100.692,345.136)">Road Trip: NC to CO</text>
+                <text class="tooltiptext" transform="translate(2100.692,345.136)">Road Trip: Co to NC</text>
                 <image id="col-map" x="2119.449" y="370.809" xlink:href="./resources/images/co-map.png" width="30" height="30" />
-                <circle id="co-nc" class="click" cx="2134.449" cy="385.809" r="15" stroke="black" stroke-width="3.5" fill="none" />
+                <circle id="nc-co" class="click" cx="2134.449" cy="385.809" r="15" stroke="black" stroke-width="3.5" fill="none" />
               </g>
 
         <!-- Life Line Stops Ends Here -->
@@ -505,7 +506,7 @@
 
               <g class="tooltip" x="815.831" y="153.849">
                 <text class="tooltiptext" transform="translate(815.831,118)">Artisanal Arts</text>
-                <circle id="artisanal-arts " class="click" cx="815.831" cy="153.849" r="10" stroke="black" stroke-width="5" fill="white" />                </a>
+                <circle id="artisanal-arts" class="click" cx="815.831" cy="153.849" r="10" stroke="black" stroke-width="5" fill="white" />                </a>
               </g>
 
               <g class="tooltip" x="864.06" y="153.849">
@@ -778,7 +779,7 @@
 
             <g class="tooltip" x="1569.364" y="147.871">
                 <text class="tooltiptext" transform="translate(1569.364,118)">Technology Integration</text>
-                <circle id=" tech-integration" class="click" cx="1569.364" cy="147.871" r="10" stroke="black" stroke-width="5" fill="white" />
+                <circle id="tech-integration" class="click" cx="1569.364" cy="147.871" r="10" stroke="black" stroke-width="5" fill="white" />
             </g>
 
             <g class="tooltip" x="1637.895" y="147.871">
@@ -788,12 +789,12 @@
 
             <g class="tooltip" x="1706.426" y="147.871">
                 <text class="tooltiptext" transform="translate(1706.426,118)">2nd Language Adquisition</text>
-                <circle id="2nd-language" class="click" cx="1706.426" cy="147.871" r="10" stroke="black" stroke-width="5" fill="white" />
+                <circle id="second-language" class="click" cx="1706.426" cy="147.871" r="10" stroke="black" stroke-width="5" fill="white" />
             </g>
 
             <g class="tooltip" x="1772.372" y="147.871">
                 <text class="tooltiptext" transform="translate(1772.372,118)">Spanish as 2nd Language</text>
-                <circle id="spanish-2nd" class="click" cx="1772.372" cy="147.871" r="10" stroke="black" stroke-width="5" fill="white" />
+                <circle id="spanish-second" class="click" cx="1772.372" cy="147.871" r="10" stroke="black" stroke-width="5" fill="white" />
             </g>
 
             <g class="tooltip" x="1828.797" y="147.871">
@@ -934,6 +935,28 @@
     <img src="./resources/images/TechEdu-Crtf.jpg" alt="">
     <h4>Teacher Certificate: Educational Technology Specialist</h4>
     <h2>Puerto Rico Department of Education - PR</h2>
+  </div>
+
+  </div>
+
+  <div id="openCTlic" class="modalDialog">
+
+  <div class="modal-img">
+    <a href="#close" title="Close" class="close">X</a>
+    <img src="./resources/images/ct-lic.jpg" alt="">
+    <h4>Teacher Certificate: Art and Spanish</h4>
+    <h2>Connecticut Department of Education</h2>
+  </div>
+
+  </div>
+
+  <div id="openMAlic" class="modalDialog">
+
+  <div class="modal-img">
+    <a href="#close" title="Close" class="close">X</a>
+    <img src="./resources/images/ma-lic.jpg" alt="">
+    <h4>Teacher Certificate: Foreing Language - Spanish</h4>
+    <h2>Massachusetts Department of Elementary &amp; Secundary Education</h2>
   </div>
 
   </div>
@@ -1150,7 +1173,7 @@
 
     <div id="openPractica" class="modalDialog">
 
-      <div class="modal-img">
+      <div class="modal-img-vertical">
         <a href="#close" title="Close" class="close">X</a>
         <img src="./resources/images/practdocente.jpg">
         <h2>UNIVERSITY OF PUERTO RICO Río Piedras – San Juan, PR</h2>
