--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
               <g class="life-stop tooltip" x="80.746" y="385.809">
                 <a xlink:href="#openBD2" id="tooltipmodal">
                   <!-- <text class="tooltiptext" id="anchor-start" transform="translate(83.865,335.092)">José E. Cartagena-Ortiz</text> -->
+                  <image id="salin-flag" x="50.756" y="355.809" xlink:href="./resources/images/salinas-flag.png" width="60" height="60" />
                   <image id="pr-flag" x="50.756" y="355.809" xlink:href="./resources/images/pr-flag.png" width="60" height="60" />
                   <circle id="b-date2" class="click" cx="80.746" cy="385.809" r="30" stroke="black" stroke-width="5" fill="none" />
                 </a>
