--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         </div>
 
         <div id="JE-favs">
-          <i class="fa fa-vcard"></i>
           <a href="mailto:j.enrique77@gmail.com" target="_top"><i class="fa fa-envelope-square"></i></a>
           <a href="https://www.linkedin.com/in/jenrique77/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
         </div>
@@ -64,7 +63,7 @@
               <g class="life-stop tooltip" x="80.746" y="385.809">
                 <a xlink:href="#openBD2" id="tooltipmodal">
                   <!-- <text class="tooltiptext" id="anchor-start" transform="translate(83.865,335.092)">José E. Cartagena-Ortiz</text> -->
-                  <image id="salin-flag" x="50.756" y="355.809" xlink:href="./resources/images/salinas-flag.png" width="60" height="60" />
+                  <!-- <image id="salin-flag" x="50.756" y="355.809" xlink:href="./resources/images/salinas-flag.png" width="60" height="60" /> -->
                   <image id="pr-flag" x="50.756" y="355.809" xlink:href="./resources/images/pr-flag.png" width="60" height="60" />
                   <circle id="b-date2" class="click" cx="80.746" cy="385.809" r="30" stroke="black" stroke-width="5" fill="none" />
                 </a>
@@ -78,10 +77,8 @@
               </g>
 
               <g class="life-stop" x="236.948" y="488.243">
-                <a xlink:href="">
                   <image id="us-flag" x="216.948" y="468.243" xlink:href="./resources/images/us.png" width="40" height="40" />
                   <circle id="il-nj" class="click" cx="236.948" cy="488.243" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
               <g class="life-stop" x="371.971" y="385.809">
@@ -98,11 +95,9 @@
               </g>
 
               <g class="life-stop" x="523.485" y="178.941">
-                <a xlink:href="" >
                   <image id="mx-flag" x="503.485" y="158.941" xlink:href="./resources/images/mx.png" width="40" height="40" />
                   <!-- <image id="mx-airplane" x="503.485" y="158.941" xlink:href="./resources/images/airplane.png" width="40" height="40" /> -->
                   <circle id="mexico" class="click" cx="523.485" cy="178.941" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
               <g class="life-stop" x="596.652" y="385.809">
@@ -112,25 +107,19 @@
               </g>
 
               <g class="life-stop" x="660.907" y="385.809">
-                <a xlink:href="" >
                   <image id="esp-flag" x="640.907" y="365.809" xlink:href="./resources/images/esp.png" width="40" height="40" />
                   <circle id="espana" class="click" cx="660.907" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
               <g class="life-stop" x="702.157" y="385.809">
-                <a xlink:href="" >
                   <image id="fr-flag" x="682.157" y="365.809" xlink:href="./resources/images/fr.png" width="40" height="40" />
                   <circle id="france" class="click" cx="702.157" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
 
               <g class="life-stop" x="742.857" y="385.809">
-                <a xlink:href="" >
                   <image id="it-flag" x="722.857" y="365.809" xlink:href="./resources/images/it.png" width="40" height="40" />
                   <circle id="italy" class="click" cx="742.857" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
               <g class="life-stop" x="818.582" y="385.809">
@@ -140,17 +129,13 @@
               </g>
 
               <g class="life-stop" x="879.643" y="385.809">
-                <a xlink:href="" >
                   <image id="us-flag" x="859.643" y="365.809" xlink:href="./resources/images/us.png" width="40" height="40" />
                   <circle id="ny" class="click" cx="879.643" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
               <g class="life-stop" x="1040.47" y="385.809">
-                <a xlink:href="" >
                   <image id="dr-flag" x="1020.47" y="365.809" xlink:href="./resources/images/dr.png" width="40" height="40" />
                   <circle id="dominicana" class="click" cx="1040.47" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
               <g class="life-stop" x="1101.753" y="385.809">
@@ -180,10 +165,8 @@
               </g>
 
               <g class="life-stop" x="1643.891" y="385.809">
-                <a xlink:href="" >
                   <image id="col-flag" x="1623.891" y="365.809" xlink:href="./resources/images/col.png" width="40" height="40" />
                   <circle id="colombia" class="click" cx="1643.891" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
               <g class="life-stop" x="1699.957" y="385.809">
@@ -193,10 +176,8 @@
               </g>
 
               <g class="life-stop" x="1759.934" y="385.809">
-                <a xlink:href="" >
                   <image id="canada-flag" x="1739.934" y="365.809" xlink:href="./resources/images/can.png" width="40" height="40" />
                   <circle id="canada" class="click" cx="1759.934" cy="385.809" r="20" stroke="black" stroke-width="5" fill="none" />
-                </a>
               </g>
 
               <g class="life-stop" x="1859.106" y="385.809">
@@ -327,36 +308,43 @@
 
               <!-- PR Section Starts -->
 
-              <g class="job-stop" x="595.439" y="438.166">
-                  <circle id="greco" class="click" cx="595.439" cy="438.166" r="5" stroke="black" stroke-width="5" fill="white" />
+              <g class="job-stop tooltip" x="595.439" y="438.166">
+                <text class="tooltiptext" id="anchor-end" transform="translate(568.89,443.059)">El Greco Restaurant</text>
+                <circle id="greco" class="click" cx="595.439" cy="438.166" r="5" stroke="black" stroke-width="5" fill="white" />
               </g>
 
-              <g class="job-stop" x="595.439" y="461.82">
-                  <circle id="farmacia" class="click" cx="595.439" cy="459.82" r="5" stroke="black" stroke-width="5" fill="white" />
+              <g class="job-stop tooltip" x="595.439" y="461.82">
+                <text class="tooltiptext" id="anchor-end" transform="translate(568.89,462.509)">El Coco Pharmacy</text>
+                <circle id="farmacia" class="click" cx="595.439" cy="459.82" r="5" stroke="black" stroke-width="5" fill="white" />
               </g>
 
-              <g class="job-stop" x="595.439" y="489.014">
-                  <circle id="antoninos" class="click" cx="595.439" cy="489.014" r="15" stroke="black" stroke-width="5" fill="white" />
+              <g class="job-stop tooltip" x="595.439" y="489.014">
+                <text class="tooltiptext" id="anchor-end" transform="translate(568.89,496.014)">Antonino's Pizza</text>
+                <circle id="antoninos" class="click" cx="595.439" cy="489.014" r="15" stroke="black" stroke-width="5" fill="white" />
               </g>
 
-              <g class="job-stop" x="634.163" y="489.014">
-                  <circle id="cine" class="click" cx="634.163" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
+              <g class="job-stop tooltip" x="634.163" y="489.014">
+                <text class="tooltiptext" id="anchor-start" transform="translate(627.866,456.222)">Caribbean Cinema</text>
+                <circle id="cine" class="click" cx="634.163" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
               </g>
 
-              <g class="job-stop" x="663.955" y="489.014">
-                  <circle id="pizzahut" class="click" cx="663.955" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
+              <g class="job-stop tooltip" x="663.955" y="489.014">
+                <text class="tooltiptext" transform="translate(663.955,461.763)">Pizza Hut</text>
+                <circle id="pizzahut" class="click" cx="663.955" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
               </g>
 
-              <g class="job-stop" x="693.747" y="489.014">
-                  <circle id="gap" class="click" cx="693.747" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
+              <g class="job-stop tooltip" x="693.747" y="489.014">
+                <text class="tooltiptext" transform="translate(693.907,461.82)">The Gap</text>
+                <circle id="gap" class="click" cx="693.747" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
               </g>
 
-              <g class="job-stop" x="730.474" y="489.014">
-                  <circle id="biblioteca" class="click" cx="730.474" cy="489.014" r="15" stroke="black" stroke-width="5" fill="white" />
+              <g class="job-stop tooltip" x="730.474" y="489.014">
+                <text class="tooltiptext" transform="translate(730.474,456.222)">Biblioteca de Arquitectura</text>
+                <circle id="biblioteca" class="click" cx="730.474" cy="489.014" r="15" stroke="black" stroke-width="5" fill="white" />
               </g>
 
               <g class="job-stop" x="767.47" y="489.014">
-                <a xlink:href="">
+                <a xlink:href="#openAnisa">
                   <circle id="anisa" class="click" cx="767.47" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
@@ -374,15 +362,14 @@
               </g>
 
               <g class="job-stop" x="907.909" y="489.014">
-                <a xlink:href="#">
-                  <circle id="escuelaAbierta" class="click" cx="907.909" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
+                <a xlink:href="#openManualidades">
+                  <circle id="manualidades" class="click" cx="907.909" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
 
-              <g class="job-stop" x="950.619" y="489.014">
-                <a xlink:href="#">
-                  <circle id="?" class="click" cx="950.619" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
-                </a>
+              <g class="job-stop tooltip" x="950.619" y="489.014">
+                <text class="tooltiptext" transform="translate(950.231,456.222)">"Escuela Abierta"</text>
+                <circle id="escuelaAbierta" class="click" cx="950.619" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
               </g>
 
               <g class="job-stop" x="1101.068" y="489.014">
@@ -392,7 +379,7 @@
               </g>
 
               <g class="job-stop" x="1171.224" y="489.014">
-                <a xlink:href="#">
+                <a xlink:href="#openUPRHccc">
                   <circle id="uprh-ccc" class="click" cx="1171.224" cy="489.014" r="5" stroke="black" stroke-width="5" fill="white" />
                 </a>
               </g>
@@ -1027,18 +1014,13 @@
 
     <div id="openPDhets" class="modalDialog">
 
-      <div class="modal-text">
+      <div class="modal-img">
         <a href="#close" title="Close" class="close">X</a>
+        <img src="./resources/images/hets.jpg" alt="">
         <h2>Basic Certification: Integrating New Technologies in Higher Education</h2>
         <h3>Hispanic Educational Technology Services (HETS)</h3>
         <h3>Metropolitan University</h3>
         <h4>San Juan, PR</h4>
-        <ul>
-          <li>Assessment of online courses and faculty</li>
-          <li>Online support services for faculty, Blogs and Wikis</li>
-          <li>Student Online Services</li>
-          <li>Designing and creation of an online educational module</li>
-        </ul>
       </div>
 
     </div>
@@ -1184,6 +1166,17 @@
 
     </div>
 
+    <div id="openAnisa" class="modalDialog">
+
+      <div class="modal-img-vertical">
+        <a href="#close" title="Close" class="close">X</a>
+        <img src="./resources/images/anisa.jpg">
+        <h2>"Cultura Bella" Project</h2>
+        <h4>Visual Arts Teacher</h4>
+      </div>
+
+    </div>
+
     <div id="openDE1" class="modalDialog">
 
       <div class="modal-text">
@@ -1195,6 +1188,17 @@
           <li>Designed, developed and implemented original curriculum based on Teaching Art Through Art History methodology, and the Expectations of Excellence for Visual Arts.</li>
           <li>Taught five sections of Visual Art five days a week during the school year, to approximately 30 students per section that impacted approximately 1,500 students from grades K through 6 in 6 years.</li>
         </ul>
+      </div>
+
+    </div>
+
+    <div id="openManualidades" class="modalDialog">
+
+      <div class="modal-img">
+        <a href="#close" title="Close" class="close">X</a>
+        <img src="./resources/images/tallermanualidades.jpg">
+        <h2>"Mi Maestro Amigo" Project</h2>
+        <h4>Craft Workshop</h4>
       </div>
 
     </div>
@@ -1216,6 +1220,19 @@
       </div>
 
     </div>
+
+    <div id="openUPRHccc" class="modalDialog">
+
+      <div class="modal-img-vertical">
+        <a href="#close" title="Close" class="close">X</a>
+        <img src="./resources/images/seminario-ccc.jpg">
+        <h2>Instructional Design Workshops</h2>
+        <h4>VI Seminar for Professors</h4>
+        <h4>CCC - University of Puerto Rico Humacao</h4>
+      </div>
+
+    </div>
+
 
     <div id="openDE2" class="modalDialog">
 
@@ -1493,14 +1510,11 @@
       </div>
     </div>
 
-
     <!-- Skills Lines Stops Starts Here -->
 
   <!-- Modal Boxes Ends Here -->
 
     <!-- Scripts Start Here -->
-
-
 
     <!-- Scripts Ends Here -->
 
