--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
   <head>
 
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
     <title>Josenrique | Graphic Resume</title>
+
     <link rel="shortcut icon" href="./resources/images/je-logo-favicon.png" />
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
@@ -21,7 +23,6 @@
 
     ga('create', 'UA-104410881-1', 'auto');
     ga('send', 'pageview');
-
     </script>
 
   </head>
